data/derived/sp14/progs/unify/prog4240.ml.out
Characters 57-62:
  g f b
  ^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
